--- a/deploy-site.yml
+++ b/deploy-site.yml
@@ -26,8 +26,7 @@ jobs:
         run: npm install
 
       - name: 4. Construir el sitio web
-        run: npx @11ty/eleventy --pathprefix=website
-        # El --pathprefix=website es CRUCIAL para GitHub Pages
+        run: npx @11ty/eleventy
 
       - name: 5. Configurar GitHub Pages
         uses: actions/configure-pages@v3
