fix: Ajustar configuración de despliegue

--- a/deploy-site.yml
+++ b/deploy-site.yml
@@ -26,7 +26,8 @@ jobs:
         run: npm install
 
       - name: 4. Construir el sitio web
-        run: npx @11ty/eleventy
+        run: npx @11ty/eleventy --pathprefix=/website/
+        # El --pathprefix es CRUCIAL para GitHub Pages
 
       - name: 5. Configurar GitHub Pages
         uses: actions/configure-pages@v3
