--- a/deploy-site.yml
+++ b/deploy-site.yml
@@ -12,6 +12,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     steps:
       - name: 1. Checkout del repositorio
         uses: actions/checkout@v3
@@ -26,16 +30,15 @@ jobs:
         run: npm install
 
       - name: 4. Construir el sitio web
-        run: npx @11ty/eleventy --pathprefix=/website/
-        # El --pathprefix es CRUCIAL para GitHub Pages
+        run: npx @11ty/eleventy
 
       - name: 5. Configurar GitHub Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: 6. Subir artefacto del sitio
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: '_site'
 
       - name: 7. Desplegar en GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
