--- a/.github/workflows/content_scheduler.yml
+++ b/.github/workflows/content_scheduler.yml
@@ -37,7 +37,10 @@ jobs:
 
       - name: Verificar si hay cambios
         id: git-check
+        # Primero, añadimos cualquier archivo .md nuevo en la carpeta posts.
+        # Luego, `git diff` puede detectar si hay cambios preparados para el commit.
         run: |
+          git add posts/*.md
           echo "changes=$(if git diff --exit-code --quiet; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
 
       - name: Commit y Push del Nuevo Artículo
@@ -45,7 +48,6 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions Bot'
           git config --global user.email 'github-actions-bot@users.noreply.github.com'
-          git add posts/*.md
           # Busca el archivo .md más reciente para el mensaje del commit
           LATEST_POST=$(ls -t posts/*.md | head -n 1)
           COMMIT_MESSAGE="feat(content): Add new article from bot: $(basename $LATEST_POST .md)"
