fix(ci): Align API key variable name for Google Gemini

--- a/.github/workflows/content_scheduler.yml
+++ b/.github/workflows/content_scheduler.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           python scripts/automation_app.py
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GOOGLE_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
           REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
           REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
