fix(reddit): Add debug logging for Reddit auth and improve workflow

--- a/.github/workflows/content_scheduler.yml
+++ b/.github/workflows/content_scheduler.yml
@@ -38,7 +38,7 @@ jobs:
           echo "Verificando la presencia de los secretos de Reddit..."
           if [ -n "${{ secrets.REDDIT_CLIENT_ID }}" ]; then echo "✅ REDDIT_CLIENT_ID encontrado."; else echo "❌ ERROR: REDDIT_CLIENT_ID no encontrado o vacío."; fi
           if [ -n "${{ secrets.REDDIT_CLIENT_SECRET }}" ]; then echo "✅ REDDIT_CLIENT_SECRET encontrado."; else echo "❌ ERROR: REDDIT_CLIENT_SECRET no encontrado o vacío."; fi
-          if [-n "${{ secrets.REDDIT_USERNAME }}" ]; then echo "✅ REDDIT_USERNAME encontrado."; else echo "❌ ERROR: REDDIT_USERNAME no encontrado o vacío."; fi
+          if [ -n "${{ secrets.REDDIT_USERNAME }}" ]; then echo "✅ REDDIT_USERNAME encontrado."; else echo "❌ ERROR: REDDIT_USERNAME no encontrado o vacío."; fi
           if [ -n "${{ secrets.REDDIT_PASSWORD }}" ]; then echo "✅ REDDIT_PASSWORD encontrado."; else echo "❌ ERROR: REDDIT_PASSWORD no encontrado o vacío."; fi
           echo "--------------------------------------------------"
         # Este paso no necesita la sección `env`, ya que accede a los secretos directamente.
@@ -48,7 +48,7 @@ jobs:
         run: |
           python scripts/automation_app.py
         env:
-          GOOGLE_API_KEY: ${{ github.event.inputs.google_api_key }}
+          GOOGLE_API_KEY: ${{ github.event.inputs.google_api_key || secrets.GOOGLE_API_KEY }}
           REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
           REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
           REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
