--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": ".eleventy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "eleventy"
   },
   "repository": {
     "type": "git",
